adding new styling

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body class="main">
-    <section class="login w-50 ">
+    <section class="sign w-50 ">
         <div class="text-center fs-1 p-5">
-            <i class="fa-regular fa-comments text-light  "></i>
+            <i class="fa-solid fa-lock text-light  "></i>
         </div>
-        <div class="login-form container">
+        <div class="sign-form container">
             <h3 class="text-dark text-center text-cap p-3 m-2 fs-1">sign in</h3>
             <form action="">
                 <div class="is-flex w-100">
@@ -37,8 +37,8 @@
                             <input type="password" class="form-control " id="floatingPassword" placeholder="Password">
                             <label for="floatingPassword">Confirm Password</label>
                         </div>
-                        <a href="#" class="btn  m-3 w-75">log in</a>
-                        <a href="../index.html"> </a>
+                        <a href="./loginpage/login.html" class="btn  m-3 w-75">log in</a>
+                        <!-- <a href="../index.html"> </a> -->
                     </div>
             </form>
             </div>
