--- a/loginpage/login.html
+++ b/loginpage/login.html
@@ -14,7 +14,7 @@
 <body>
     <section class="login w-50 ">
         <div class="text-center fs-1 p-5">
-            <i class="fa-regular fa-comments text-light  "></i>
+            <i class="fa-solid fa-lock-open text-light  "></i>
         </div>
         <div class="login-form container">
             <h3 class="text-dark text-center p-5 m-3 fs-1">Login</h3>
