--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/sign.css">
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="style/css1/all.css">
