--- a/loginpage/login.html
+++ b/loginpage/login.html
@@ -29,7 +29,7 @@
                         <label for="floatingPassword">Password</label>
                     </div>
                     <a href="#" class="btn  m-3 w-75">log in</a>
-                    <a href="../index.html"> you haven't account ? singn in</a>
+                    <a href="../index.html"> you haven't account ? sing in</a>
                 </div>
             </form>
         </div>
