--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
 </head>
 
 <body class="main">
-    <section class="sign  w-50 ">
+    <section class="sign col-sm-10 col-md-10 col-11 ">
         <div class="text-center fs-1 p-5">
             <i class="fa-solid fa-lock text-light  "></i>
         </div>
         <div class="sign-form  container">
-            <h3 class="text-dark text-center text-cap p-3 m-2 fs-1">sign in</h3>
+            <h3 class="text-dark text-center text-capitalize p-3 m-2 fs-1">sign in</h3>
             <form action="">
                 <div class="is-flex w-100">
                     <div class="form-floating mb-3 w-75">
-                        <input type="text" class="form-control " id="floatingInput" placeholder="jone">
-                        <label for="floatingInput">User name</label>
+                        <input type="text" class="form-control " id="username" placeholder="jone">
+                        <label for="username">User name</label>
                     </div>
                     <div class="is-flex w-100">
                         <div class="form-floating mb-3 w-75">
-                            <input type="email" class="form-control " id="floatingInput" placeholder="example@gmail.com">
-                            <label for="floatingInput">Email</label>
+                            <input type="email" class="form-control " id="email-inp" placeholder="example@gmail.com">
+                            <label for="email-inp">Email</label>
                         </div>
                         <div class="form-floating mb-3 w-75">
-                            <input type="password" class="form-control " id="floatingPassword" placeholder="Password">
-                            <label for="floatingPassword">Password</label>
+                            <input type="password" class="form-control " id="pass" placeholder="Password">
+                            <label for="pass">Password</label>
                         </div>
                         <div class="form-floating w-75">
-                            <input type="password" class="form-control " id="floatingPassword" placeholder="Password">
-                            <label for="floatingPassword">Confirm Password</label>
+                            <input type="password" class="form-control " id="con-pass" placeholder="Password">
+                            <label for="con-pass">Confirm Password</label>
                         </div>
                         <a href="./loginpage/login.html" class="btn  m-3 w-75">log in</a>
                         <!-- <a href="../index.html"> </a> -->
@@ -45,6 +45,7 @@
     </section>
     <script src="style/bootstrap/js/bootstrap.js">
     </script>
+    <script src="main.js"></script>
 </body>
 
 </html>
