--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="main">
-    <section class="sign col-sm-10 col-md-10 col-11 ">
+    <section class="sign col-lg-4 col-10 ">
         <div class="text-center fs-1 p-5">
             <i class="fa-solid fa-lock text-light  "></i>
         </div>
