--- a/loginpage/login.html
+++ b/loginpage/login.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="login col-sm-10 col-md-10 col-10 ">
+    <section class="login col-lg-4 col-10 ">
         <div class="text-center fs-1 p-5">
             <i class="fa-solid fa-lock-open text-light  "></i>
         </div>
