--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h3 class="text-dark text-center text-capitalize p-3 m-2 fs-1">sign in</h3>
             <form action="">
                 <div class="is-flex w-100">
-                    <div class="form-floating mb-3 w-75">
+                    <div class="form-floating username mb-3 w-75">
                         <input type="text" class="form-control " id="username" placeholder="jone">
                         <label for="username">User name</label>
                     </div>
@@ -37,13 +37,15 @@
                             <input type="password" class="form-control " id="con-pass" placeholder="Password">
                             <label for="con-pass">Confirm Password</label>
                         </div>
-                        <a href="./loginpage/login.html" class="btn  m-3 w-75">log in</a>
+                        <a href="#" class="btn  m-3 w-75">log in</a>
+                        <!-- <a href="./loginpage/login.html" class="btn  m-3 w-75">log in</a> -->
                         <!-- <a href="../index.html"> </a> -->
                     </div>
             </form>
             </div>
     </section>
     <script src="style/bootstrap/js/bootstrap.js">
+        m, m
     </script>
     <script src="main.js"></script>
 </body>
