make a function that check the input fields

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <label for="username">User name</label>
                     </div>
                     <div class="is-flex w-100">
-                        <div class="form-floating mb-3 w-75">
+                        <div class="form-floating mail mb-3 w-75">
                             <input type="email" class="form-control " id="email-inp" placeholder="example@gmail.com">
                             <label for="email-inp">Email</label>
                         </div>
