--- a/loginpage/login.html
+++ b/loginpage/login.html
@@ -20,21 +20,32 @@
             <h3 class="text-dark text-center p-5 m-3 fs-1">Login</h3>
             <form action="">
                 <div class="is-flex w-100">
-                    <div class="form-floating mb-3 w-75">
-                        <input type="email" class="form-control " id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">Email address</label>
+                    <div class="form-floating mail mb-3 w-75">
+                        <input type="email" class="form-control " id="mail" placeholder="name@example.com">
+                        <label for="mail">Email address</label>
+                        <div class="erorr "><span>
+                            Please Enter the email
+                        </span></div>
                     </div>
-                    <div class="form-floating w-75">
-                        <input type="password" class="form-control " id="floatingPassword" placeholder="Password">
-                        <label for="floatingPassword">Password</label>
+                    <div class="form-floating pass w-75">
+                        <input type="password" class="form-control " id="pass" placeholder="Password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
+                        <label for="pass">Password</label>
+                        <div id="message">
+                            <small>Password must contain the following:</small>
+                            <p id="letter" class="invalid fs-6">A <b>lowercase</b> letter</p>
+                            <p id="capital" class="invalid fs-6">A <b>capital (uppercase)</b> letter</p>
+                            <p id="number" class="invalid fs-6">A <b>number</b></p>
+                            <!-- <p id="length" class="invalid fs-6">Minimum <b>8 characters</b></p> -->
+                        </div>
                     </div>
-                    <a href="#" class="btn  m-3 w-75">log in</a>
+                    <a href="#" class="btn  m-3 w-75">Submit</a>
                     <a href="../index.html" class="text-muted "> you haven't account ? sing in</a>
                 </div>
             </form>
         </div>
     </section>
     <script src="style/bootstrap/js/bootstrap.js"></script>
+    <script src="lodin.js"></script>
 </body>
 
 </html>
