new styling added

--- a/loginpage/login.html
+++ b/loginpage/login.html
@@ -13,13 +13,13 @@
 
 <body>
     <section class="login col-lg-4 col-10 ">
-        <div class="text-center fs-1 p-5">
+        <div class="text-center fs-1 p-3">
             <i class="fa-solid fa-lock-open text-light  "></i>
+            <h3 class="text-light text-center p-2 m-2 fs-1">Login</h3>
         </div>
         <div class="login-form container">
-            <h3 class="text-dark text-center p-5 m-3 fs-1">Login</h3>
             <form action="">
-                <div class="is-flex w-100">
+                <div class="is-flex w-100 pt-5">
                     <div class="form-floating mail mb-3 w-75">
                         <input type="email" class="form-control " id="mail" placeholder="name@example.com">
                         <label for="mail">Email address</label>
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                     <a href="#" class="btn  m-3 w-75">Submit</a>
-                    <a href="../index.html" class="text-muted "> you haven't account ? sing in</a>
+                    <a href="../index.html" class="text-muted text-capitalize "> you haven't account ? sing UP</a>
                 </div>
             </form>
         </div>
