--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 </head>
 
 <body class="main">
-    <section class="sign col-lg-4 col-10 ">
-        <div class="text-center fs-1 p-5">
+    <section class="sign col-lg-4 col-10 text-center ">
+        <div class="text-center fs-1 p-3">
             <i class="fa-solid fa-lock text-light  "></i>
+            <h3 class="text-light text-center text-capitalize p-3 m-1 fs-1">sign up</h3>
         </div>
         <div class="sign-form  container">
-            <h3 class="text-dark text-center text-capitalize p-3 m-2 fs-1">sign in</h3>
+
             <form action="">
                 <div class="is-flex w-100">
                     <div class="form-floating username mb-3 w-75">
@@ -51,8 +52,9 @@
                             <label for="con-pass">Confirm Password</label>
                         </div>
                         <!-- <a href="#" class="btn  m-3 w-75">log in</a> -->
-                        <a href="./loginpage/login.html" type="submit" class="btn  m-3 w-75">log in</a>
-                        <!-- <a href="../index.html"> </a> -->
+                        <a href="./loginpage/login.html" type="submit" class="btn  m-3 w-75">Sing Up</a>
+                        <a href="./loginpage/login.html" class="m-3 text-muted w-75 text-center"> Already have any account ? Sign In</a>
+
                     </div>
             </form>
             </div>
