--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                         <div class="form-floating w-75">
                             <input type="password" class="form-control " id="con-pass" placeholder="Password" required>
                             <label for="con-pass">Confirm Password</label>
+                            <div id="message2">
+                                <small class="text-capitalize">enter the password again </small>
+                            </div>
                         </div>
                         <!-- <a href="#" class="btn  m-3 w-75">log in</a> -->
                         <a href="./loginpage/login.html" type="submit" class="btn  m-3 w-75">Sing Up</a>
